fixed box shadow cutting off in customers page

--- a/page/customers/custormers.css
+++ b/page/customers/custormers.css
@@ -4,6 +4,7 @@ main {
 
 main >div {
     overflow: hidden;
+    padding: 31px;
 }
 
 .testimonials {
